<!--
  * Esta obra está sujeta a la licencia Reconocimiento-CompartirIgual 4.0 Internacional de
 * Creative Commons. Para ver una copia de esta licencia,
 * visite http://creativecommons.org/licenses/by-sa/4.0/.
 *
 * CareMe, creado por Alejandro Perez Vereda el 29/7/15.
 *
 * This work is licensed under the Creative Commons Attribution-ShareAlike 4.0 International
 * License. To view a copy of this license,
 * visit http://creativecommons.org/licenses/by-sa/4.0/.
 *
 * CareMe, created by Alejandro Perez Vereda on 29/7/15.
 *
 * Contact: aperezvereda@gmail.com
 -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".TestActivity"
    android:weightSum="1">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="horizontal"
        tools:context=".TestActivity"
        android:weightSum="1">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnPlaces"
            android:id="@+id/btnPlaces"
            android:textColor="#ffffffff"
            android:background="@drawable/test_button_style"
            android:visibility="visible"
            android:layout_margin="3dp"/>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnPlaceInstance"
            android:id="@+id/btnInstances"
            android:background="@drawable/test_button_style"
            android:textColor="#ffffff"
            android:layout_margin="3dp"/> >


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnClear"
            android:id="@+id/btnClear"
            android:textColor="#ffffff"
            android:background="@drawable/test_button_style"
            android:layout_margin="3dp"/>

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".TestActivity"
        android:weightSum="1">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnRoutines"
            android:id="@+id/btnRoutines"
            android:background="@drawable/test_button_style"
            android:textColor="#ffffffff"
            android:layout_margin="3dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnInstance"
            android:id="@+id/btnRInstances"
            android:textColor="#ffffffff"
            android:background="@drawable/test_button_style"
            android:layout_margin="3dp"/>

        <Button
            android:layout_width="63dp"
            android:layout_height="wrap_content"
            android:text="@string/btnHome"
            android:id="@+id/btnHome"
            android:textColor="#ffffffff"
            android:background="@drawable/test_button_style"
            android:layout_margin="3dp"/>
    </LinearLayout>

    <ScrollView
        android:id="@+id/ScrollView01"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtLog"
            android:maxLines="500"
            android:padding="5dp"
            android:text="@string/welcome"
            android:background="#7f80b1ba"
            android:enabled="true" />
    </ScrollView>

</LinearLayout>
